infrastructure/base/authelia/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authelia
  namespace: authelia
  annotations:
    external-dns.alpha.kubernetes.io/hostname: auth.home.lewelly.com
  labels:
    app.kubernetes.io/part-of: home-infra
spec:
  parentRefs:
    - name: home-gateway
      namespace: cilium-gateway
  hostnames:
    - auth.home.lewelly.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: authelia
          port: 9091
